# gptbundlev2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
gptbundle/: cli.py  entrypoint.sh  initial_table_bootstrap.py  main.py  routers.py
gptbundle/alembic/: env.py
gptbundle/alembic/versions/: 516c1f356530_initial_migration.py
gptbundle/common/: config.py  db.py  logging.py
gptbundle/llm/: chain_router.py  chat_factory.py  chat_message_history_wrapper.py  conversational_chain.py  exceptions.py  models.py  rag_chain.py  router.py  service.py
gptbundle/media_storage/: storage.py  storage_router.py
gptbundle/messaging/: elasticsearch_repository.py  exceptions.py  models.py  repository.py  router.py  schemas.py  search_service.py  service.py  storage.py  storage_router.py  websocket_service.py
gptbundle/security/: router.py  service.py
gptbundle/tests/: conftest.py
gptbundle/tests/llm/: test_llm_router.py  test_service.py
gptbundle/tests/media_storage/: test_storage.py  test_storage_router.py
gptbundle/tests/messaging/: test_elasticsearch_repository.py  test_image_generation.py  test_messaging_router.py  test_service.py  test_storage.py  test_storage_router.py  test_websocket.py
gptbundle/tests/security/: test_security_service.py
gptbundle/tests/user/: test_user_router.py  test_user_service.py
gptbundle/user/: models.py  router.py  service.py
react-ts-vite-app/: package-lock.json  package.json  vite.config.ts
react-ts-vite-app/src/: App.tsx  index.css  main.tsx
react-ts-vite-app/src/api/: client.ts
react-ts-vite-app/src/components/ui/: toaster.tsx
react-ts-vite-app/src/context/: AuthContext.tsx  ImagePreviewContext.tsx  ModelContext.tsx
react-ts-vite-app/src/features/auth/: types.ts
react-ts-vite-app/src/features/auth/components/: LoginForm.tsx  ProtectedPage.tsx  RegisterForm.tsx
react-ts-vite-app/src/features/auth/services/: authService.ts
react-ts-vite-app/src/features/chat/: types.ts
react-ts-vite-app/src/features/chat/hooks/: useChats.ts  (+3 more)
react-ts-vite-app/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/: cli.py  entrypoint.sh  initial_table_bootstrap.py  main.py  routers.py
src/alembic/: env.py
src/auth/: service.py
src/common/: config.py  db.py
src/llm/: chat_factory.py  models.py  service.py
src/messaging/: models.py  repository.py  router.py  schemas.py  service.py
src/security/: service.py
src/user/: models.py  router.py  service.py
tests/: conftest.py  test_chat_exceptions.py
tests/auth/: test_auth_service.py
tests/messaging/: test_messaging_router.py  test_service.py
tests/security/: test_security_service.py
tests/user/: test_service.py  test_user_router.py  test_user_service.py
(+7 files in other folders)
